<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.AssessmentList">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="314dp"
        android:layout_height="300dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseViewTerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Course Name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextCourseTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Enter Course Name"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourseStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_date"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextCourseStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/MMddYY"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourseEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/EndDate"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextCourseEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/MMddYY"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourseStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Status"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextCourseStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/CurrentStatus"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourseInstructorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Instructor"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextCourseInstructorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/InstructorName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourseInstructorPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Instructor Phone"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextCourseInstructorPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint=
                        "@string/PhoneNumber"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourseInstructorEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Email"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextCourseEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/InstructorEmail"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourseNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/notes"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextCourseNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/AssessmentRecyclerView"
        android:layout_width="344dp"
        android:layout_height="211dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="76dp"
        android:background="@color/recycleColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="enterAssessmentsDetails"
        app:backgroundTint="@color/dark_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_launcher_add_foreground" />

    <Button
        android:id="@+id/button6"
        android:layout_width="77dp"
        android:layout_height="41dp"
        android:layout_marginStart="289dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        android:onClick="saveCourse"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/AssessmentRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="77dp"
        android:layout_height="41dp"
        android:layout_marginStart="289dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        android:onClick="saveCourse"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/AssessmentRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>