<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.CourseList" >

    <Button
        android:id="@+id/button4"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_marginStart="285dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:onClick="saveTerm"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/CourseRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="343dp"
        android:layout_height="180dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TermTitle"
                    android:textColor="@color/dark_red" />

                <EditText
                    android:id="@+id/editTextTermTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Enter Term"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTermStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Term Start Date"
                    android:textColor="@color/dark_red" />

                <EditText
                    android:id="@+id/editTextTermStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/MMddYY"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTermEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Term End Date"
                    android:textColor="@color/dark_red"
                    android:textColorHint="@color/gray" />

                <EditText
                    android:id="@+id/editTextTermEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/MMddYY"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CourseRecyclerView"
        android:layout_width="340dp"
        android:layout_height="118dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="136dp"
        android:background="@color/recycleColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="enterAssessments"
        app:backgroundTint="@color/dark_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_launcher_add_foreground"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
